fixing horizontal scrollbar bug

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ html {
   -webkit-user-select: none;
   -ms-user-select: none;
   -webkit-tap-highlight-color: transparent;
+  overflow-x: hidden;
 }
 
 body {
